iai-callgrind/tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.stderr
error: Invalid argument: wrong

         = help: Valid arguments are: `args`, `config`, `setup`, teardown`

 --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:8:13
  |
8 | #[bench::id(wrong = LibraryBenchmarkConfig::default())]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected an expression
  --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:12:22
   |
12 | #[bench::id(config = )]
   |                      ^

error: Invalid argument: wrong

         = help: Valid arguments are: `args`, `file`, `config`, `setup`, `teardown`

  --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:16:18
   |
16 | #[benches::wrong(wrong = LibraryBenchmarkConfig::default())]
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected an expression
  --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:20:31
   |
20 | #[benches::missing_expression(args = [], config = )]
   |                               ^^^^

error[E0277]: the trait bound `InternalLibraryBenchmarkConfig: From<&str>` is not satisfied
 --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:3:1
  |
3 | #[library_benchmark]
  | ^^^^^^^^^^^^^^^^^^^^ the trait `From<&str>` is not implemented for `InternalLibraryBenchmarkConfig`
  |
  = help: the following other types implement trait `From<T>`:
            <InternalLibraryBenchmarkConfig as From<LibraryBenchmarkConfig>>
            <InternalLibraryBenchmarkConfig as From<&LibraryBenchmarkConfig>>
            <InternalLibraryBenchmarkConfig as From<&mut LibraryBenchmarkConfig>>
  = note: required for `&str` to implement `Into<InternalLibraryBenchmarkConfig>`
  = note: this error originates in the attribute macro `library_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)
